# audio-lib-test

./: CMakeLists.txt  cross-hisiv600.cmake
inc/: g729.h  mopus.h
src/: g729.c  main.c  mopus.c
